warning on error

--- a/src/main/resources/assets/probejs/lang/zh_cn.json
+++ b/src/main/resources/assets/probejs/lang/zh_cn.json
@@ -14,6 +14,7 @@
   "probejs.hello": "欢迎来到ProbeJS。ProbeJS将会在注册表出现变动时重新生成类型文件。",
   "probejs.enabled_warning": "ProbeJS正在运行！在你导出整合包之前，请排除生成的类型文件，并使用命令关闭ProbeJS：",
   "probejs.bye_bye": "ProbeJS已被关闭。require() 仍可正常运行。记得不要打包类型文件。",
+  "probejs.error": "生成类型文件期间有错误发生，请报告到 ProbeJS Legacy 的 Github 页面。",
   "probejs.removed_script": "已清理脚本类型 %s 的类型文件。",
   "probejs.hello_again": "ProbeJS已开启，祝你生活美满。",
   "probejs.isolation": "ProbeJS将会隔离脚本作用域，只有具有export关键字的方法/变量可被其他脚本访问。",
