--- a/src/main/resources/assets/probejs/lang/en_us.json
+++ b/src/main/resources/assets/probejs/lang/en_us.json
@@ -15,6 +15,7 @@
   "probejs.enabled_warning": "ProbeJS is enabled! You should exclude .probe generated when you finished development, and disable the mod by: ",
   "probejs.bye_bye": "ProbeJS is now disabled. require() still works, though. Don't forget to exclude the typing.",
   "probejs.hello_again": "ProbeJS is enabled now. Happy coding!",
+  "probejs.error": "Error happened when generating typing, please report to ProbeJS Legacy Github page.",
   "probejs.removed_script": "Removed typing for script type %s.",
   "probejs.isolation": "ProbeJS will isolate each script files now, only `export`ed identifiers will be exposed.",
   "probejs.no_isolation": "ProbeJS will not try to isolate different scopes now. Be aware of duplicated names.",
