--- a/src/main/resources/assets/probejs/lang/en_us.json
+++ b/src/main/resources/assets/probejs/lang/en_us.json
@@ -26,5 +26,6 @@
   "probejs.no_complete": "ProbeJS will disable some types in dump now, so your VSCode should run faster. Use snippets for those types missing.",
   "probejs.performance": "You installed %s mods! You might want to use /probejs complete to disable some typing for performance.",
   "probejs.decompile": "ProbeJS will decompile mod sources at next dump, decompilation will also trigger when mod list changed.",
-  "probejs.no_decompile": "ProbeJS will not decompile mod sources now."
+  "probejs.no_decompile": "ProbeJS will not decompile mod sources now.",
+  "probejs.config_refreshed": "ProbeJS config refreshed!"
 }
